--- a/Notebook/main.tex
+++ b/Notebook/main.tex
@@ -25,7 +25,7 @@
 %
 %\part{SWITCHING TECHNOLOGIES}
 %\include{Switch}
-\include{VLAN}
+%\include{VLAN}
 %\include{vtp}
 %\include{stp}
 %\include{EtherChannel}
@@ -40,7 +40,7 @@
 %
 %\part{WAN TECHNOLOGIES}
 %\include{PPP}
-%\include{GRE,eBGP}
+\include{GRE,eBGP}
 %\include{QoS}
 %
 %\part{INFRASTRUCTURE SERVICE}
