--- a/Notebook/VLAN.tex
+++ b/Notebook/VLAN.tex
@@ -131,7 +131,7 @@ The entire VLAN configuration can be erased using \verb|delete vlan.dat|. This c
 
 To configure a switch port on one end of a trunk link, use the \code{sw mode trunk} interface configuration command. The native VLAN can also be changed (other than VLAN 1) using \code{sw trunk native vlan <vlan-id>}. Always configure both ends of a trunk link with the same native VLAN. Use \code{sw trunk allowed vlan <vlan-list>} command to specify the list of VLANs to be allowed on the trunk link.\\
 
-\begin{sexylisting}{Trunking configuration}
+\begin{sexylisting}{Trunking}
 interface f0/1
   sw trunk encapsulation dot1q
   sw mode trunk
@@ -155,7 +155,7 @@ Consider the topology in Figure \ref{VoiceVLAN}. In this example, PC5 is connect
 \begin{sexylisting}{Voice VLAN example}
 vlan 20
   name Student
-  vlan 150
+vlan 150
   name Voice
 exit
 
@@ -175,10 +175,6 @@ end
 
 The command \code{mls qos trust cos} enables QoS classification based on the class of service (CoS) assigned by the IP phone. The command \code{sw voice vlan 150} assigns  voice VLAN 150 to port F0/18. 
 
-\subsection{Verification}
-
-VLAN configurations can be validated using the following command:
-
 \begin{sexylisting}{VLAN verification}
 show vlan name Student
 show vlan summary
@@ -187,11 +183,9 @@ show vlan id 20
 show interfaces vlan 20
 \end{sexylisting}
 
-The trunking configuration is verified by the following commands:
-
-\begin{sexylisting}{Trunking configuration}
+\begin{sexylisting}{Trunking verification}
 show int switchport
-show int <int> switchport
+show int f0/1 switchport
 show int trunk
 \end{sexylisting}
 
@@ -225,37 +219,35 @@ Router-on-a-stick performs inter-VLAN routing by accepting VLAN-tagged traffic c
 \begin{figure}[hbtp]
 \caption{Router-on-a-stick topology}\label{InterVLAN}
 \centering
-\includegraphics[scale=1]{pictures/InterVLAN.PNG}
+\includegraphics[scale=0.7]{pictures/InterVLAN.PNG}
 \end{figure}
 
 
-To enable Router-on-a stick, start by enabling trunking on the switch port that is connected to the router.
+To enable Router-on-a stick, start by enabling trunking on the switch port that is connected to the router. As for the router, on the port connected to the switch, we create a subinterface for each VLAN. On each subinterface, configure 802.1Q trunk for a specific VLAN using \code{encap dot1q <vlan-id>}. Next, assign the IPv4 address corresponding to the VLAN subnet. Finally, the router interface connected to the switch must be enabled by \code{no shutdown} command. Remember to use the \code{native} keyword for the native VLAN, otherwise, the router would consider VLAN 1 as the native VLAN.
 
-\begin{verbatim}
-S1(config-vlan)# interface f0/5
-S1(config-if)# switchport mode trunk
-S1(config-if)# end
-\end{verbatim}
+\begin{sexylisting}{Router-on-a-stick}
+interface f0/5
+  sw mode trunk
+end
 
-As for the router, create a subinterface for each VLAN. Then configure 802.1Q trunk for a specific VLAN using \verb|encapsulation dot1q vlan_id|. Next, assign the IPv4 address corresponding to the VLAN subnet. Finally, the physical interface must be enabled. 
+interface g0/0.10
+  encapsulation dot1q 10
+  ip address 172.17.10.1 255.255.255.0
+interface g0/0.30
+  encapsulation dot1q 30
+  ip address 172.17.30.1 255.255.255.0
+interface g0/0.99
+  encapsulation dot1q 99 native
+  ip address 192.168.100.1 255.255.255.0  
+exit
 
-\begin{verbatim}
-R1(config)# interface g0/0.10
-R1(config-subif)# encapsulation dot1q 10
-R1(config-subif)# ip address 172.17.10.1 255.255.255.0
-R1(config-subif)# 
-R1(config-subif)# interface g0/0.30
-R1(config-subif)# encapsulation dot1q 30
-R1(config-subif)# ip address 172.17.30.1 255.255.255.0
-R1(config-subif)# exit
-R1(config)# 
-R1(config)# interface g0/0
-R1(config-if)# no shutdown
-\end{verbatim}
+interface g0/0
+  no shutdown
+end
 
-\note Use the command \verb|encapsulation dot1q vlan_id native| for the native VLAN. If the \verb|native| keyword option is excluded, the router would consider VLAN 1 as the native VLAN.\\
-
-On the router, use \verb|show vlan| and \verb|show ip route| to verify inter-vlan configuration.
+show vlan
+show ip route  
+\end{sexylisting}
 
 \subsection{Layer 3 switching using SVIs}
 
@@ -288,46 +280,27 @@ Inter-VLAN routing is performed using SVIs and routed ports.
 \includegraphics[scale=0.6]{pictures/Layer3topology.PNG}
 \end{figure}
 
-Take the multiplayer switch MLS in Figure \ref{Layer3topology} as an example. The first thing to do is enabling layer 3 routing:
+Take the multiplayer switch MLS in Figure \ref{Layer3topology} as an example. The first thing to do is enabling layer 3 routing. Because the interface g0/2 is connected to a router on the cloud, it should be configured as a routed port and assigned an IP address. Next, create VLANs and configure SVI for each of them.
 
-\begin{verbatim}
-MLS(config)# ip routing
-\end{verbatim}
+\begin{sexylisting}{Multiplayer switch}
+ip routing
 
-Next, configure G0/2 (connect to the Cloud) as a routed port and assign an IP address:
+interface g0/2
+  no switchport
+  ip address 209.165.200.225 255.255.255.252
+exit
 
-\begin{verbatim}
-MLS(config)# interface g0/2
-MLS(config-if)# no switchport
-MLS(config-if)# ip address 209.165.200.225 255.255.255.252
-\end{verbatim}
+vlan 10
+  name Staff
+vlan 20
+  name Student  
+exit
 
-Create VLAN 10 and 20, then configure SVI for each of them:
+interface vlan 10
+  ip address 192.168.10.254 255.255.255.0
+interface vlan 20
+  ip address 192.168.20.254 255.255.255.0  
+end
 
-\begin{verbatim}
-MLS(config)# vlan 10
-MLS(config-vlan)# name Staff
-MLS(config-vlan)# exit
-MLS(config)# 
-MLS(config)# interface vlan 10
-MLS(config-if)# ip address 192.168.10.254 255.255.255.0
-MLS(config-if)# exit
-MLS(config)# 
-MLS(config)# vlan 20
-MLS(config-vlan)# name Student
-MLS(config-vlan)# exit
-MLS(config)# 
-MLS(config)# interface vlan 20
-MLS(config-if)# ip address 192.168.20.254 255.255.255.0
-\end{verbatim}
-
-Finally, use the \verb|show ip route| command to verify routing is enabled:
-
-\begin{verbatim}
-MLS# show ip route
-<output omitted>
-C 192.168.10.0/24 is directly connected, Vlan10
-C 192.168.20.0/24 is directly connected, Vlan20
-  209.165.200.0/30 is subnetted, 1 subnets
-C 209.165.200.224 is directly connected, GigabitEthernet0/2
-\end{verbatim}
+show ip route  
+\end{sexylisting}
